--- a/index.html
+++ b/index.html
@@ -781,42 +781,158 @@
         }
 
         /* Responsive */
+
+        /* Tablet */
+        @media (max-width: 1024px) {
+            .nav-container {
+                padding: 0 24px;
+            }
+
+            .menu-item {
+                grid-template-columns: 120px 1fr;
+            }
+
+            .menu-item-image {
+                width: 120px;
+                height: 120px;
+                font-size: 48px;
+            }
+
+            .hero {
+                height: 45vh;
+            }
+
+            .promo-banner {
+                max-width: 700px;
+            }
+        }
+
+        /* Mobile */
         @media (max-width: 768px) {
             .service-cards {
                 grid-template-columns: 1fr;
             }
 
             .nav-container {
-                padding: 0 20px;
+                padding: 0 16px;
                 flex-wrap: wrap;
+                align-items: center;
+                position: relative;
+            }
+
+            /* Center logo while keeping back/contact on sides */
+            .nav-logo {
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            .nav-logo img {
+                height: 44px;
+            }
+
+            .back-btn {
+                order: 1;
+                padding: 8px 12px;
+                font-size: 14px;
+            }
+
+            .nav-contact {
+                order: 3;
+                padding: 8px 12px;
+                font-size: 14px;
             }
 
             .promo-banner {
                 grid-template-columns: 1fr;
-                padding: 30px 20px;
+                padding: 20px;
             }
 
             .menu-item {
                 grid-template-columns: 1fr;
                 text-align: center;
+                padding: 15px;
             }
 
             .menu-item-image {
                 margin: 0 auto;
+                width: 120px;
+                height: 120px;
+                font-size: 48px;
             }
 
             .menu-item-footer {
                 flex-direction: column;
-                gap: 15px;
+                gap: 12px;
             }
 
             .category-section {
-                padding: 40px 20px;
+                padding: 30px 16px;
             }
 
             .testimonials-grid,
             .team-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .hero {
+                height: 40vh;
+                background-attachment: scroll;
+            }
+
+            /* Avoid fixed backgrounds on small devices for performance */
+            .landing-page,
+            .menu-app {
+                background-attachment: scroll;
+            }
+
+            .chef-image {
+                width: 220px;
+                height: 220px;
+                font-size: 110px;
+            }
+
+            .footer {
+                padding: 40px 20px 20px;
+            }
+        }
+
+        /* Small phones */
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 28px;
+            }
+
+            .hero p {
+                font-size: 14px;
+            }
+
+            .menu-item-image {
+                width: 100px;
+                height: 100px;
+                font-size: 40px;
+            }
+
+            .menu-item-name {
+                font-size: 18px;
+            }
+
+            .menu-item-price {
+                font-size: 20px;
+            }
+
+            .nav-contact,
+            .back-btn {
+                padding: 8px 10px;
+                font-size: 13px;
+            }
+
+            .service-card {
+                padding: 20px;
+            }
+
+            .service-icon {
+                font-size: 40px;
             }
         }
     </style>
