--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@
             }
 
             .menu-items {
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr 1fr;
                 gap: 16px;
             }
 
