--- a/index.html
+++ b/index.html
@@ -330,17 +330,25 @@
         .nav-contact {
             background: var(--orange);
             color: var(--white);
-            padding: 8px 18px;
-            border-radius: 50px;
+            padding: 10px 20px;
+            border-radius: 25px;
             font-weight: 600;
             text-decoration: none;
             transition: all 0.3s ease;
             font-size: 14px;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            box-shadow: 0 4px 15px rgba(255,140,66,0.3);
         }
 
         .nav-contact:hover {
             background: var(--white);
             color: var(--orange);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255,140,66,0.4);
         }
 
         .back-btn {
@@ -593,6 +601,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center;
         }
 
         .menu-item:hover .menu-item-image {
@@ -697,6 +706,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center;
         }
 
         .category-header:first-of-type {
@@ -1509,14 +1519,22 @@
 
             .back-btn {
                 order: 1;
-                padding: 8px 12px;
+                padding: 10px 14px;
                 font-size: 14px;
+                background: rgba(255,140,66,0.15);
+                border-color: var(--orange);
+                border-radius: 20px;
+            }
+
+            .back-btn:hover {
+                background: var(--orange);
+                color: var(--white);
             }
 
             .nav-contact {
                 order: 3;
-                padding: 8px 12px;
-                font-size: 14px;
+                padding: 10px 16px;
+                font-size: 13px;
             }
 
             .promo-banner {
@@ -1532,7 +1550,8 @@
 
             .menu-item-image {
                 margin: 0 auto;
-                width: 100%;
+                max-width: 150px;
+                height: 15%;
                 height: 120px;
                 border-radius: 10px;
             }
@@ -1712,7 +1731,8 @@
             .menu-items {
                 grid-template-columns: 1fr 1fr;
                 gap: 10px;
-            }
+            }max-width: 130px;
+                height: 13
 
             .menu-item {
                 padding: 10px;
@@ -1740,8 +1760,9 @@
                 padding: 8px 12px;
                 font-size: 9px;
                 width: 100%;
-                justify-content: center;
-            }
+                justify-c8px 12px;
+                font-size: 12px;
+                border-radius: 18
 
             .nav-logo img {
                 height: 32px;
